# circuitmatter

./: .gitignore  .pre-commit-config.yaml  CircuitMatter-PAI-Cert.der  CircuitMatter-PAI-Cert.der.license  CircuitMatter-PAI-Key.der  LICENSE  README.md  README.md.license  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: python-package.yml
circuitmatter/: __init__.py  __main__.py  case.py  certificates.py  crypto.py  data_model.py  exchange.py  interaction_model.py  message.py  nonvolatile.py  pase.py  protocol.py  session.py  subscription.py  tlv.py
circuitmatter/clusters/: core.py
circuitmatter/clusters/device_management/: __init__.py  basic_information.py  general_commissioning.py  general_diagnostics.py  group_key_management.py  network_commissioning.py  node_operational_credentials.py
circuitmatter/clusters/general/: __init__.py  identify.py  level_control.py  on_off.py  temperature_measurement.py
circuitmatter/clusters/lighting/: color_control.py
circuitmatter/device_types/: simple_device.py
circuitmatter/utility/: random.py  recording.py  replay.py
docs/: conf.py  examples.rst  examples.rst.license  index.rst  requirements.txt
examples/: circuitmatter_simpletest.py  one_rgb_light.py  replay.py  replay_rgb_light.py  two_onoff_led.py
test_data/: apple_recorded_packets.jsonl  certification_declaration.der  chip_tool_recorded_packets.jsonl  device_state.json  recorded_packets.json  recorded_packets.jsonl
tests/: test_chunked_message.py  test_message_reception_state.py  test_setup_codes.py  test_status_report.py  test_tlv.py
(+15 files in other folders)
