# SPDX-FileCopyrightText: Copyright (c) 2024 Scott Shawcroft for Adafruit Industries
#
# SPDX-License-Identifier: MIT

[project]
name = "circuitmatter"
version = "0.0.0+auto.0"
authors = [{name = "Scott Shawcroft", email = "scott@adafruit.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "cryptography",
    "ecdsa",
    "qrcode",
    "Adafruit-Blinka"
]

[project.urls]
Home = "https://github.com/adafruit/circuitmatter"
"Bug Tracker" = "https://github.com/adafruit/circuitmatter/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "typing_extensions",
]

[tool.coverage.run]
branch = true
source = [
    "circuitmatter",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
